trunk/tests/kiama/negative/type_errors/L1/8_badeq2.ob
MODULE badeq;

VAR
    avar : INTEGER;
    bvar : BOOLEAN;

BEGIN
    bvar := bvar # avar
END badeq.
